--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^32.0.0",
-    "firebase": "^5.7.3",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "uuid": "^3.3.2"
+    "expo": "^33.0.0",
+    "expo-image-picker": "~5.0.2",
+    "expo-permissions": "~5.0.1",
+    "firebase": "^7.2.3",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
